<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.driver.DriverInboxActivity"
    android:gravity="center_horizontal">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <include layout="@layout/toolbar" />


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/your_messages"
        android:textAlignment="center"
        android:textSize="24sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/rideSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ride"
            android:textAlignment="center"
            app:thumbTint="@color/teal_200"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/supportSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            android:checked="true"
            android:textAlignment="center"
            app:thumbTint="@color/purple_200"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/panicSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/panic"
            android:textAlignment="center"
            app:thumbTint="@color/purple_500"/>

    </LinearLayout>
    <Button
        android:layout_width="240dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/loadMessages"
        android:text="@string/load"
        android:padding="10dp"
        android:layout_margin="2dp"
        android:backgroundTint="@color/gray"
        />
    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>