<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PassengerAccountProfile">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/mainFragmentContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/profile_picture"
                    android:padding="5dp"
                    tools:src="@drawable/pfp_test" />

                <Button
                    android:id="@+id/change_pfp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:backgroundTint="@color/gray"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/change_picture" />
            </LinearLayout>
            <Button
                android:id="@+id/change_password"
                android:layout_gravity="center"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:text="@string/changePassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:hint="@string/changeName"
                    android:inputType="text"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/surname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:text="@string/surname"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/surnameInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:hint="@string/changeSurname"
                    android:inputType="text"
                    android:padding="5dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:hint="@string/changeEmail"
                    android:inputType="textWebEmailAddress"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:text="@string/address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/addressInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:hint="@string/changeAddress"
                    android:inputType="text"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:text="@string/phoneNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/phoneNumberInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:hint="@string/changePhoneNumber"
                    android:inputType="phone"
                    android:padding="5dp"
                    tools:inputType="number" />

            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:weightSum="3">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/current_password"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_margin="5dp"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:gravity="center_horizontal|center_vertical"-->
            <!--                    android:padding="5dp"-->
            <!--                    android:text="@string/current_password"-->
            <!--                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

            <!--                <EditText-->
            <!--                    android:id="@+id/current_password_input"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_margin="5dp"-->
            <!--                    android:layout_weight="2"-->
            <!--                    android:autofillHints=""-->
            <!--                    android:hint="@string/changePassword"-->
            <!--                    android:inputType="textPassword"-->
            <!--                    android:padding="5dp" />-->
            <!--            </LinearLayout>-->

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:weightSum="3">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/new_password"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_margin="5dp"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:gravity="center_horizontal|center_vertical"-->
            <!--                    android:padding="5dp"-->
            <!--                    android:text="@string/new_password"-->
            <!--                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

            <!--                <EditText-->
            <!--                    android:id="@+id/new_password_input"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_margin="5dp"-->
            <!--                    android:layout_weight="2"-->
            <!--                    android:autofillHints=""-->
            <!--                    android:hint="@string/new_password_input"-->
            <!--                    android:inputType="textPassword"-->
            <!--                    android:padding="5dp" />-->
            <!--            </LinearLayout>-->

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:weightSum="3">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/confirm_password"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_margin="5dp"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:gravity="center_horizontal|center_vertical"-->
            <!--                    android:padding="5dp"-->
            <!--                    android:text="@string/confirm_password"-->
            <!--                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

            <!--                <EditText-->
            <!--                    android:id="@+id/confirm_password_input"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:layout_margin="5dp"-->
            <!--                    android:layout_weight="2"-->
            <!--                    android:autofillHints=""-->
            <!--                    android:hint="@string/confirm_password_input"-->
            <!--                    android:inputType="textPassword"-->
            <!--                    android:padding="5dp" />-->

            <!--            </LinearLayout>-->


            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:text="@string/confirm_changes"
                android:layout_gravity="bottom"/>

        </LinearLayout>


    </ScrollView>

</FrameLayout>